--- a/Main.tex
+++ b/Main.tex
@@ -1,8 +1,8 @@
 \documentclass{XDUthesis} %[draft
 
-\title{基于XDUthesis模板的论文写作样例}
-\author{崔元顺}
-\date{2015年12月02日}
+\title{科学数据的序列分类}
+\author{刘精昌}
+\date{}
 %题目拆分：用于封面
 \septitleA{基于\XDUthesis{} 模板的}%如果论文题目长度<=11中文字符只需填此项即可B项空着
 \septitleB{论文写作样例}%如果论文题目长度>11中文字符, 建议拆分为10+x or 11+x 将剩余x个字符填在此处。
